<resources>
    <string name="app_name">Soleklart</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Bottom_navigation_bar -->
    <string name="nav_search">Søk</string>
    <string name="nav_favorites">Favoritter</string>
    <string name="nav_info">Info</string>
    <string name="nav_settings">Innstillinger</string>
    <string name="mapSearch_text">Søk</string>
    <string name="cd_airImage">Luftkvalitet bilde</string>
    <string name="cd_cloudImage">Skydekke bilde</string>
    <string name="cd_temperatureImage">Termometer bilde</string>
    <string name="cd_rainImage">Paraply bilde</string>
    <string name="cd_windImage">vind bilde</string>
    <string name="cd_dragImage">dra hånd</string>
    <string name="cd_logo">Sol</string>
    <!-- Favourites -->
    <string name="cd_gaardbo_text">Bilde av Gaardbo</string>
    <string name="cd_toensberg_text">Bilde av Tønsberg</string>
    <string name="cd_skien_text">Bilde av Skien</string>
    <!-- Settings -->
    <string name="settings_title">Kartstil</string>
    <string name="map_aubergine_theme">Aubergine</string>
    <string name="map_standard_theme">Standard</string>
    <string name="map_night_theme">Night</string>
    <string name="settings_api_text">API 29</string>
    <string name="settings_info_text">Soleklart er en app som tilbyr muligheten for brukeren å søke opp en lokasjon
        i kartet eller gjennom tastetrykk, hvor brukeren vil få informasjon om følgende: luftkvalitet, skydekke,
        soloppgang, solnedgang og temperatur. Dette gjør det mulig for brukeren å planlegge eventuelle turer
        basert på informasjonen for et gitt sted valgt av brukeren.
    </string>
    <string name="version_text">Version 1.0</string>
    <string name="Error_noData">Fant ikke data, sjekk internett tilkobling</string>
    <string name="sollys1">Sollys er i utgangspunktet hvit, men i det lyset kommer inn i vår atmosfære, passerer lyset gjennom vanndråper og gasser som fører til at lyset blir spredt og refrakturers. Dette gjør at det hvite lyset brytes ned til lys med forskjellige farger.</string>
    <string name="TextSpredning">Forskjellige former for spredning av lys klassifiseres ut ifra størrelsesforholdet mellom partiklene som forårsaker spredningen og bølgelengden på lyset. De to vanligste formene for spredning under metrologiske forhold kalles Rayleigh (partiklene er små i forhold til bølgelengden på lyset) og Mie (partiklene er omtrent på samme størrelse som bølgelengden).</string>
    <string name="TextFargene">Under solnedgang og soloppgang sitter solen lavt over horisonten, og mere at sollyset vil derfor passere gjennom vår atmosfære, som igjen gjør at mere at det hvite lyset blir spredt, og det er dette som gir oss de vakre rød-, oransje- og gulfargene vi opplever under solnedgang og soloppgang.</string>
    <string name="TextForurensning">Typisk luftforurensning i urbane områder består ofte av partikler som varierer mellom 0.5 ti 1 μm i diameter. På grunn av dette er ikke størrelsene til partiklene uniforme nok til at det synlige lyset blir spredt gjennom Mie spredning. Spredningen forårsaket av disse partiklene er altså mindre avhengig av bølgelengden til lyset. Resultatet av dette er at det synlige sollyset og himmelen, under påvirkning av urban luftforurensning, vil fremstå mer grålig eller til og med hvit, i motsetning til den klare blå himmelen man kan få i områder med mindre luftforurensning.</string>
    <string name="TextBlaaSol">Om partiklene derimot er uniforme i størrelse, slik som i områder hvor det har vært nylige vulkanutbrudd, store skogbranner eller andre hendelser som fører til at store mengder av partikler av uniform størrelse spres i atmosfæren. Da kan man være heldig å observere fenomener som en «blå sol» eller «blå måne», nettopp fordi spredningen av lyset har skjedd gjennom Mie spredning. Dette skjedde blant annet i 2021 i Beijing, Kina hvor det ble observert en blå sol som følge av Mie-spredning gjennom store mengder sandstøvpartikler. Under kan du se et bilde av dette fenomenet.</string>
    <string name="TextHeliosentrisk">Visste du at vi hadde et geosentrisk verdenssyn helt frem til 1600-tallet? På 1600-tallet fastslo Copernicus at jorda går i bane rundt sola, og at vi altså har et ikke har et geosentrisk, men et heliosentrisk solsystem.</string>
    <string name="TextSolflekker">Visste du at solas «uperfekte» natur var det som førte oppdagelsen av solas rotasjon? Solas rotasjon ble i år 1610 gang lagt merke til og beskrevet av Galileo Galilei og Christoph Scheiner. De registrerte at solflekkene flyttet seg fra dag til dag, fra øst mot vest på solskiven, og konkluderte med dette at den roterte. Dette ble ikke godt tatt imot av kriken på denne tiden, da en oppfatning av at sola hadde flekker igjen ville antyde at gud hadde skapt noe uperfekt, noe som var utenkelig for 430 år siden. Solflekker er områder på soloverflaten med spesielt sterkt magnetfelt.</string>
    <string name="TextSkyer">Viste du at skyer gjerne kan gi mer fargerike solnedganger og soloppganger? Dette er fordi skyer fanger de siste rød-oransje lysstrålene fra solnedgangen, samt det første lyset fra soloppgangen, og dette lyset blir deretter reflektert ned mot jordoverflaten. Neste gang du vil nyte en solnedgang eller soloppgang bør du altså håpe på noe skydekke for å få den aller vakreste opplevelsen.</string>
    <string name="cd_solstraler">Bilde av solstråler</string>
    <string name="cd_blasol">Bilde av Blå sol</string>
    <string name="TextSolkart">I lenken under finner du et kart der du kan se de optimale stedene for både soloppgang og solnedgang, med hensyn på høydekurver og solas posisjon. Du kan se et bilde av kartet under lenken.</string>
    <string name="LinkSunMap">https://rawengaard.github.io/Forenklet_solkart/#9/59.9832/10.6828</string>
    <string name="titleDidYouKnow">Visste du at?</string>
    <string name="titleBlueSun">Blå sol?</string>
    <string name="titlePollution">Forurensning og sollys</string>
    <string name="titleColours">Fargene</string>
    <string name="titleScattering">Spredning</string>
    <string name="ivSunImageDescription">Bilde av sol</string>
    <string name="titleSunlight">Sollys</string>
    <string name="cd_sunmap">Bilde av Solkart</string>
    <string name="titleSunmap">Solkart</string>
    <string name="Error_placeNotFound">Fant ikke noe med dette navnet</string>
    <string name="cd_dragHandle">dra håndtak</string>
    <string name="sunfacts">Sunfacts</string>
    <string name="skipOnboarding">Hopp over omvisning</string>
    <string name="textAirQual">Luftkvalitet</string>
    <string name="tvTextAirQual">Soleklart viser luftkvaliteten, målt i PM10, svevestøv. Her kan du finne råd for ulike nivåer av forurensning.</string>
    <string name="LinkAirQual">https://luftkvalitet.miljodirektoratet.no/artikkel/artikler/helserad_og_forurensningsklasser/</string>
    <string name="search_title_onBoarding">Velg lokasjon for info om siktforhold</string>
    <string name="results_title_onBoarding">Få info for valgt lokasjon</string>
    <string name="favorite_title_onBoarding">Lagre dine favoritter</string>
    <string name="sunfacts_title_onBoarding">Les morsomme sunfacts!</string>
    <string name="settings_title_onBoarding">Innstillinger</string>
    <string name="search_description_onBoarding">Her kan du søke i søkefeltet eller trykke på kartet</string>
    <string name="results_description_onBoarding">Her kan du se vær- og siktforhold under solnedgang og soloppgang</string>
    <string name="favorite_description_onBoarding">Her kan du slette og legge til, gøy!</string>
    <string name="sunfacts_description_onBoarding">Her kan du lære om solstråler og andre fenomener</string>
    <string name="settings_description_onBoarding">Bytt til darkmode, les spennende info om appen!</string>
    <attr name="onBoardingColor" format="reference"/>
    <attr name="markerStyle" format="reference"/>
    <attr name="splashScreenColor" format="reference"/>
    <attr name="calendarColor" format="reference"/>
</resources>