<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        style="@style/containerForFavoritesSettings"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="107dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/textColor"
            android:layout_width="281dp"
            android:layout_height="52dp"
            android:layout_marginTop="28dp"
            android:padding="10dp"
            android:text="@string/nav_settings"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preferencesContainer"
        android:layout_width="match_parent"
        android:layout_height="619dp"
        style="@style/containerForConstraintLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/titleTheme"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/settings_title"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textAubergineTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.577" />

        <TextView
            android:id="@+id/textAubergineTheme"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="84dp"
            android:text="@string/map_aubergine_theme"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAubergine"
            android:theme="@style/switches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="28dp"
            android:checked="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textStandardTheme"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="24dp"
            android:text="@string/map_standard_theme"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAubergineTheme" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchStandard"
            android:theme="@style/switches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:checked="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchAubergine" />


        <TextView
            android:id="@+id/textNightTheme"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="28dp"
            android:text="@string/map_night_theme"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textStandardTheme" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchNight"
            android:theme="@style/switches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:checked="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchStandard" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textViewContainer"
            style="@style/containerForConstraintLayout"
            android:layout_width="378dp"
            android:layout_height="180dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/versionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/apiTextView"
                style="@style/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/settings_api_text"
                app:layout_constraintBottom_toTopOf="@+id/infoTextView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/infoTextView"
                style="@style/textColor"
                android:layout_width="359dp"
                android:layout_height="118dp"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_info_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.842"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/versionTextView"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="140dp"
            android:text="@string/version_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>