<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorites.FavoritesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        style="@style/containerForFavoritesSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="107dp"

            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/textColor"
            android:layout_width="281dp"
            android:layout_height="52dp"
            android:layout_marginTop="28dp"

            android:padding="10dp"
            android:text="@string/nav_favorites"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preferencesContainer"
        android:layout_width="match_parent"
        android:layout_height="619dp"
        style="@style/containerForConstraintLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/gaardboImage"
            android:layout_width="339dp"
            android:layout_height="65dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/gaardbo"
            android:contentDescription="@string/cd_gaardbo_text"
            app:layout_constraintBottom_toTopOf="@+id/toensbergImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.466" />

        <ImageView
            android:id="@+id/toensbergImage"
            android:layout_width="353dp"
            android:layout_height="64dp"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/cd_toensberg_text"
            android:src="@drawable/toensberg"
            app:layout_constraintBottom_toTopOf="@+id/gaardboImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/skienImage"
            android:layout_width="353dp"
            android:layout_height="64dp"
            android:layout_marginTop="196dp"
            android:contentDescription="@string/cd_skien_text"
            android:src="@drawable/skien"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>